# GraphicalEffects

./: CMakeLists.txt  LICENSE.txt  README.md
example/: CMakeLists.txt  example.manifest  example.qrc  example.rc  main.cpp
example/qml/: main.qml
src/: CMakeLists.txt  fastblur.cpp  fastblur.h  fastblur.qrc  fastblur.rc  fastblur_global.h  graphicaleffects.cpp  graphicaleffects.h  graphicaleffects.qrc  graphicaleffects.rc  graphicaleffects_global.h  qgfxsourceproxyv2.cpp  qgfxsourceproxyv2.h
src/qml/: BrightnessContrast.qml  ColorOverlay.qml  Colorize.qml  ConicalGradient.qml  Desaturate.qml  Displace.qml  DropShadow.qml  FastBlur.qml  FastGlow.qml  GammaAdjust.qml  Glow.qml  HueSaturation.qml  LevelAdjust.qml  LinearGradient.qml  OpacityMask.qml  RadialGradient.qml  RectangularGlow.qml  ThresholdMask.qml
src/shaders_ng/: compile.bat
